# dirstat-rs

./: Cargo.toml  README.md
debian/: prometheus-data-sizes-daily.timer  prometheus-data-sizes.service  prometheus-home-sizes-daily.timer  prometheus-home-sizes-flush.service  prometheus-home-sizes-weekly.timer  prometheus-home-sizes.service
scripts/: data-sizes.sh  home-sizes.sh
src/: ffi.rs  lib.rs  tests.rs
