[package]
name = "dirstat-rs"
version = "0.3.8"
authors = ["scullionw <scuw1801@usherbrooke.ca>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A disk usage cli similar to windirstat"
repository = "https://github.com/scullionw/dirstat-rs"
keywords = ["cli", "disk", "usage", "tree", "windirstat"]
categories = ["command-line-utilities"]

[dependencies]
rayon = "1.10"
termcolor = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
human_bytes = "0.4.3"
clap = { version = "3", features = ["derive"]}
is-terminal = "0.4.12"
dashmap = "5.5.3"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.8"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem"]}
path-absolutize = "3.1.1"

[dev-dependencies]
const_format = "0.2.23"

[profile.release]
lto = 'fat'
codegen-units = 1
strip = true
incremental = false
panic = 'abort'

[[bin]]
bench = false
path = "src/bin/main.rs"
name = "ds"
